Update: - create base style for /seats - adjust style for button - add navbar to /profile

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -89,7 +89,7 @@
                 <p class="mb-8 text-lg text-cfab7a">Buy movie tickets online and never miss your favorite movies
                     again!</p>
                 <a href="/register-account"
-                    class="px-6 py-2 font-normal text-white bg-red-800 rounded hover:bg-red-60">Get
+                    class="px-6 py-2 font-normal font-semibold text-black rounded custom-btn">Get
                     Started</a>
             </div>
         </div>
