--- a/public/styles/fe_style.css
+++ b/public/styles/fe_style.css
@@ -136,3 +136,59 @@ body{
     border-radius: 0.5rem;
     z-index: 9999;
 }
+
+.columns {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+  }
+
+  .selected {
+    background-color: yellow;
+  }
+
+  .sold {
+    background-color: gray;
+    pointer-events: none;
+    /* Disable click events */
+  }
+
+  .popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+
+  .popup-content {
+    background-color: #fff;
+    max-width: 300px;
+    margin: 100px auto;
+    padding: 20px;
+    border-radius: 5px;
+  }
+
+  .button {
+    margin-top: 10px;
+  }
+
+  .booked-button {
+    background-color: #c4c4c4;
+    border: none;
+    cursor: not-allowed;
+  }
+
+  .selected-button {
+    background-color: #6a5840;
+    border: none;
+    cursor: pointer;
+  }
+
+  .avail-button {
+    background-color: #cfab7a;
+    border: none;
+    cursor: pointer;
+  }
