--- a/views/admin-seats-edit.ejs
+++ b/views/admin-seats-edit.ejs
@@ -1,23 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Movie Ticket Booking</title>
+    <title>Add New Seats </title>
 </head>
 <body>
-    <h1>Movie Ticket Booking</h1>
-    <form action="/create-studio" method="POST">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
-
-        <label for="type">Ticket Type:</label>
-        <select id="type" name="type" required>
-            <option value="" disabled selected>Select type</option>
-            <option value="Deluxe">Deluxe</option>
-            <option value="Reguler">Reguler</option>
-        </select>
+    <h1>Add New Seats</h1>
+    <form action="/edit-seat/<%=seat.seat_id%>" method="POST">
+        <label for="seatNumber">Seat Number:</label>
+        <input type="text" id="seatNumber" name="seatNumber">
 
         <label for="city">City:</label>
-        <select id="city" name="city" required>
+        <select id="city" name="city">
             <option value="" disabled selected>Select city</option>
             <% cities.forEach((city) => { %>
                 <option value="<%=city.city%>"><%=city.city%></option>
@@ -25,22 +18,52 @@
         </select>
 
         <label for="theater">Theater:</label>
-        <select id="theater" name="theater" required>
+        <select id="theater" name="theater" onchange="updateStudioOptions()">
+        </select>
+
+        <label for="studio">studio:</label>
+        <select id="studio" name="studio">
         </select>
 
         <input type="submit" value="Book Now">
     </form>
 
     <script>
- 
+        function updateStudioOptions() {
+          var theaterSelect = document.getElementById('theater');
+          var studioSelect = document.getElementById('studio');
+          var selectedTheater = parseInt(theaterSelect.value);
+        console.log(selectedTheater);
+          var studioOptions = <%- JSON.stringify(studios) %>;
+    
+          while (studioSelect.options.length > 0) {
+            studioSelect.options[0].remove();
+        }
+                var newOption = document.createElement('option');
+                newOption.value = "None";
+                newOption.innerHTML = "None";
+                newOption.disabled = true;
+                newOption.selected = true;
+                studioSelect.appendChild(newOption);
+       
+            studioOptions.forEach(function(studio) {
+              if (studio.theater_id === selectedTheater) {
+                console.log("tes");
+                var newOption = document.createElement('option');
+                newOption.value = studio.studio_id;
+                newOption.innerHTML = studio.name;
+                studioSelect.appendChild(newOption);
+              }
+            });
+          
+      }
     
         function updateTheaterOptions() {
           var citySelect = document.getElementById('city');
           var theaterSelect = document.getElementById('theater');
           var selectedCity = citySelect.value;
-        
+          console.log(selectedCity);
           var theaterOptions = <%- JSON.stringify(theaters) %>;
-          
         
           while (theaterSelect.options.length > 0) {
             theaterSelect.options[0].remove();
@@ -60,6 +83,7 @@
                 theaterSelect.appendChild(newOption);
               }
             });
+          
       }
          // Attach the event listener after defining the function
          document.getElementById('city').addEventListener('change', updateTheaterOptions);
